--- a/conf/radiusd/eduroam-cluster.example
+++ b/conf/radiusd/eduroam-cluster.example
@@ -27,29 +27,25 @@ server eduroam.cluster {
         }
 
         authorize {
-                update control {
-                        Load-Balance-Key := "%{Calling-Station-Id}"
-                        Proxy-To-Realm := "eduroam.cluster"
-                }
-                if(!NAS-IP-Address){
-                        update request {
-                                NAS-IP-Address := "%{Packet-Src-IP-Address}"
-                        }
-                }
+            %%reject_realm%%
+            %%realm%%
+            if(!NAS-IP-Address){
+                    update request {
+                            NAS-IP-Address := "%{Packet-Src-IP-Address}"
+                    }
+            }
         }
 
 
         authenticate {
         }
         accounting {
-                update control {
-                        Proxy-To-Realm := "eduroam.cluster"
-                }
-                if(!NAS-IP-Address){
-                        update request {
-                                NAS-IP-Address := "%{Packet-Src-IP-Address}"
-                        }
-                }
+            %%realm%%
+            if(!NAS-IP-Address){
+                    update request {
+                            NAS-IP-Address := "%{Packet-Src-IP-Address}"
+                    }
+            }
         }
 
 }
