Proxy to the correct realm

--- a/conf/radiusd/eduroam-cluster.example
+++ b/conf/radiusd/eduroam-cluster.example
@@ -40,7 +40,9 @@ server eduroam.cluster {
         authenticate {
         }
         accounting {
-            %%local_realm%%
+            update control {
+                    Proxy-To-Realm := "packetfence"
+            }
             if(!NAS-IP-Address){
                     update request {
                             NAS-IP-Address := "%{Packet-Src-IP-Address}"
