Detect realm before doing a test

--- a/conf/radiusd/eduroam-cluster.example
+++ b/conf/radiusd/eduroam-cluster.example
@@ -27,6 +27,8 @@ server eduroam.cluster {
         }
 
         authorize {
+            suffix
+            ntdomain
             %%reject_realm%%
             %%local_realm%%
             if(!NAS-IP-Address){
