--- a/conf/mariadb/mariadb.conf.tt.example
+++ b/conf/mariadb/mariadb.conf.tt.example
@@ -143,7 +143,7 @@ max_connections=[% max_connections %]
 [galera]
 # Mandatory settings
 wsrep_on=ON
-wsrep_provider=/usr/lib64/galera/libgalera_smm.so
+wsrep_provider=[% libgalera %]
 default_storage_engine=InnoDB
 innodb_autoinc_lock_mode=2
 wsrep_cluster_name=pfcluster
