Cache ldap matches using the source is, rule id, and filter

--- a/t/data/authentication.conf
+++ b/t/data/authentication.conf
@@ -118,6 +118,29 @@ class=administration
 match=all
 action0=mark_as_sponsor=1
 
+[LDAP0]
+description=pf-test
+password=
+scope=sub
+binddn=CN=test,DC=inverse,DC=ca
+basedn=DC=ldap,DC=inverse,DC=ca
+usernameattribute=user
+connection_timeout=5
+encryption=none
+port=33389
+type=AD
+host=127.0.0.1
+cache_match=1
+
+[LDAP0 rule Network_Team_Auth]
+description=Full Access
+class=authentication
+match=any
+condition0=memberOf,equals,CN=NOC Users,DC=ldap,DC=inverse,DC=ca
+action0=set_role=default
+action1=set_unreg_date=2022-02-02
+
+
 [LDAP]
 description=pf-test
 password=
@@ -129,7 +152,7 @@ connection_timeout=5
 encryption=none
 port=33389
 type=AD
-host=localhost
+host=127.0.0.1
 cache_match=1
 
 [LDAP rule Network_Team_Auth]
