Updated the inner tunnel to set EAP-Type when doing TTLS.

--- a/conf/radiusd/packetfence-tunnel.example
+++ b/conf/radiusd/packetfence-tunnel.example
@@ -20,6 +20,13 @@ server packetfence-tunnel {
 #  Make *sure* that 'preprocess' comes before any realm if you
 #  need to setup hints for the remote radius server
 authorize {
+    # TTLS does not send an EAP-Message to be parsed so the eap module
+    # cannot assign the EAP-Type
+    if ( outer.EAP-Type == TTLS) {
+        update request {
+            &EAP-Type := TTLS
+        }
+    }
 	#
 	#  Take a User-Name, and perform some checks on it, for spaces and other
 	#  invalid characters.  If the User-Name appears invalid, reject the
