--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1074,7 +1074,7 @@ Requires to restart haproxy in order to apply the change.
 type=toggle
 options=enabled|disabled
 description=<<EOT
-CSP Security Headers enforced through portal and admin interfaces
+Enforce Content-Security-Policy (CSP) HTTP response header in captive portal and admin interfaces
 EOT
 
 [advanced.language]
