--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1127,7 +1127,7 @@ EOT
 type=toggle
 options=enabled|disabled
 description=<<EOT
-Use the radius username instead of the TLS certificate common name when doing machine auth.
+Use the RADIUS username instead of the TLS certificate common name when doing machine authentication.
 EOT
 
 [omapi.ip2mac_lookup]
