--- a/conf/keepalived.conf.example
+++ b/conf/keepalived.conf.example
@@ -5,7 +5,7 @@ global_defs {
    notification_email_from %%fromaddr%%
    smtp_server %%smtpserver%%
    smtp_connect_timeout 30
-   router_id PacketFence
+   router_id %%router_id%%
 }
 
 vrrp_script haproxy {
