Renaming configuration items

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -648,14 +648,14 @@ violations with an action of "email", or any other PacketFence-related
 message.
 EOT
 
-[alerting.encryption]
+[alerting.smtp_encryption]
 type=toggle
 options=none|ssl|starttls
 description=<<EOT
-What encryption type to use.
+Encryption style when connecting to the SMTP server.
 EOT
 
-[alerting.port]
+[alerting.smtp_port]
 type=number
 description=<<EOT
 The port of the SMTP server.
@@ -663,26 +663,26 @@ The port of the SMTP server.
  none: 25, ssl: 465, starttls: 587
 EOT
 
-[alerting.username]
+[alerting.smtp_username]
 type=text
 description=<<EOT
 The username used to connect to the SMTP server
 EOT
 
-[alerting.password]
+[alerting.smtp_password]
 type=obfuscated
 description=<<EOT
 The password used to connect to the SMTP server
 EOT
 
-[alerting.verify_ssl]
+[alerting.smtp_verifyssl]
 type=toggle
 options=enabled|disabled
 description=<<EOT
 Verify SSL connection
 EOT
 
-[alerting.timeout]
+[alerting.smtp_timeout]
 type=number
 description=<<EOT
 The timeout in seconds for sending an email
