Added systemd service

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -119,6 +119,13 @@ description=<<EOT
 Should DHCPd be managed by PacketFence?
 EOT
 
+[services.go_ipset]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Should go_ipset be managed by PacketFence?
+EOT
+
 [services.haproxy]
 type=toggle
 options=enabled|disabled
@@ -314,6 +321,12 @@ type=hidden
 description=<<EOT
 Location of the haproxy binary. Only necessary to change if you are
 not running the RPMed version.
+EOT
+
+[services.go_ipset_binary]
+type=hidden
+description=<<EOT
+Location of the go_ipset binary.
 EOT
 
 [services.winbindd]
