--- a/conf/mariadb/mariadb.conf.tt.example
+++ b/conf/mariadb/mariadb.conf.tt.example
@@ -143,7 +143,7 @@ max_connections=[% max_connections %]
 [galera]
 # Mandatory settings
 wsrep_on=ON
-wsrep_provider=[% libgalera %]
+wsrep_provider=/usr/lib64/galera/libgalera_smm.so
 default_storage_engine=InnoDB
 innodb_autoinc_lock_mode=2
 wsrep_cluster_name=pfcluster
@@ -153,8 +153,11 @@ wsrep_node_address="[% server_ip %]"
 wsrep_on=ON 
 wsrep_sst_method = xtrabackup
 wsrep_sst_auth = "[% replication_user %]:[% replication_password %]"
-wsrep_notify_cmd=/usr/local/pf/var/run/db-update
+# Uncomment the line below so that the database goes into read_only mode when its not a primary view or there is only 1 member left in your cluster
+# This was known to cause issues with rapid cluster state changes, see #2593 for details
+#wsrep_notify_cmd=/usr/local/pf/var/run/db-update
 wsrep_provider_options=''
+wsrep_dirty_reads=ON
 #
 # Optional setting
 wsrep_slave_threads=1
