Accept notify from any child process for pf-mariadb

--- a/conf/systemd/packetfence-mariadb.service
+++ b/conf/systemd/packetfence-mariadb.service
@@ -8,6 +8,7 @@ Conflicts=mysql.service mariadb.service
 
 [Service]
 Type=notify
+NotifyAccess=all
 # Setting this to true can break replication and the Type=notify settings
 # See also bind-address mysqld option.
 PrivateNetwork=false
