--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1069,6 +1069,7 @@ type=numeric
 description=<<EOT
 Amount of requests on invalid URLs after which the rate limiting will kick in for this device.
 Requires to restart haproxy in order to apply the change.
+EOT
 
 [advanced.csp_security_headers]
 type=toggle
