Remove bunary log from mysql config. Useless in our case

--- a/conf/mariadb/mariadb.conf.tt.example
+++ b/conf/mariadb/mariadb.conf.tt.example
@@ -46,7 +46,7 @@ thread_concurrency = [% thread_concurrency %]
 [% IF cluster_enabled %]
 # Replication Master Server (default)
 # binary logging is required for replication
-log-bin=mysql-bin
+#log-bin=mysql-bin
 binlog-format=row
 expire_logs_days=2
 max_binlog_size=13107200
