--- a/conf/log.conf.d/rlm_perl.conf.example
+++ b/conf/log.conf.d/rlm_perl.conf.example
@@ -7,9 +7,9 @@ log4perl.rootLogger = INFO, RLM_PERL
 
 ### Logging for rlm_perl to avoid segfaults
 log4perl.appender.RLM_PERL                              = pf::log::FileAppender
-log4perl.appender.RLM_PERL.filename                     = /usr/local/pf/logs/packetfence.log
-log4perl.appender.RLM_PERL.syswrite                     = 1
-log4perl.appender.RLM_PERL.mode                         = append
+log4perl.appender.RLM_PERL.filename                     = /usr/local/pf/bin/pflogger-packetfence
+log4perl.appender.RLM_PERL.syswrite                     = 0
+log4perl.appender.RLM_PERL.mode                         = pipe
 log4perl.appender.RLM_PERL.layout                       = PatternLayout
 log4perl.appender.RLM_PERL.layout.ConversionPattern     = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: %m (%M)%n
 log4perl.appender.RLM_PERL.umask                        = 0002
