--- a/conf/log.conf.d/rlm_perl.conf.example
+++ b/conf/log.conf.d/rlm_perl.conf.example
@@ -11,7 +11,7 @@ log4perl.appender.RLM_PERL.filename                     = /usr/local/pf/bin/pflo
 log4perl.appender.RLM_PERL.syswrite                     = 0
 log4perl.appender.RLM_PERL.mode                         = pipe
 log4perl.appender.RLM_PERL.layout                       = PatternLayout
-log4perl.appender.RLM_PERL.layout.ConversionPattern     = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: %m (%M)%n
+log4perl.appender.RLM_PERL.layout.ConversionPattern     = %Z%d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: %m (%M)%n
 log4perl.appender.RLM_PERL.umask                        = 0002
 log4perl.appender.RLM_PERL.user                         = pf
 log4perl.appender.RLM_PERL.group                        = pf
