Split the CSP header parameter
Related to #2627

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1049,11 +1049,18 @@ Amount of requests on invalid URLs after which the rate limiting will kick in fo
 Requires to restart haproxy in order to apply the change.
 EOT
 
-[advanced.csp_security_headers]
+[advanced.admin_csp_security_headers]
 type=toggle
 options=enabled|disabled
 description=<<EOT
-(Experimental) Enforce Content-Security-Policy (CSP) HTTP response header in captive portal and admin interfaces
+(Experimental) Enforce Content-Security-Policy (CSP) HTTP response header in admin interface
+EOT
+
+[advanced.portal_csp_security_headers]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+(Experimental) Enforce Content-Security-Policy (CSP) HTTP response header in captive portal interface
 EOT
 
 [advanced.language]
