Mark CSP headers as experimental

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1053,7 +1053,7 @@ EOT
 type=toggle
 options=enabled|disabled
 description=<<EOT
-Enforce Content-Security-Policy (CSP) HTTP response header in captive portal and admin interfaces
+(Experimental) Enforce Content-Security-Policy (CSP) HTTP response header in captive portal and admin interfaces
 EOT
 
 [advanced.language]
