--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Breaks: libdata-alias-perl
 Depends: ${misc:Depends}, vlan,
  openssl, openssl-blacklist, openssl-blacklist-extra,
  mariadb-server (>= 10.1),
- snmp, snmptrapfmt, snmp-mibs-downloader, conntrack,
+ snmp, snmptrapfmt, snmptrapd, snmp-mibs-downloader, conntrack,
 # apache related
  apache2, apache2-utils, libapache2-mod-proxy-html,
  apache2-mpm-prefork, libapache2-mod-apreq2, libapache2-mod-perl2,
