Added sso on accounting

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1077,6 +1077,13 @@ description=<<EOT
 Trigger Single-Sign-On (Firewall SSO) on access reevaluation
 EOT
 
+[advanced.sso_on_accounting]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Trigger Single-Sign-On (Firewall SSO) on accounting
+EOT
+
 [advanced.record_accounting_in_sql]
 type=toggle
 options=enabled|disabled
