Added an option to enable or not firewall sso on dhcp

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1084,6 +1084,13 @@ description=<<EOT
 Trigger Single-Sign-On (Firewall SSO) on accounting
 EOT
 
+[advanced.sso_on_dhcp]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Trigger Single-Sign-On (Firewall SSO) on dhcp
+EOT
+
 [advanced.record_accounting_in_sql]
 type=toggle
 options=enabled|disabled
