Added back mod_proxy_connect in httpd.proxy.conf

--- a/conf/httpd.conf.d/httpd.proxy.tt.example
+++ b/conf/httpd.conf.d/httpd.proxy.tt.example
@@ -49,6 +49,9 @@
   <IfModule !mod_systemd.c>
     LoadModule systemd_module     /usr/lib/apache2/modules/mod_systemd.so
   </IfModule>
+  <IfModule !mod_proxy_connect.c>
+   LoadModule proxy_connect_module /usr/lib/apache2/modules/mod_proxy_connect.so
+  </IfModule>
 </IfDefine>
 
 #RHEL specific
@@ -99,6 +102,9 @@
   </IfModule>
   <IfModule !mod_systemd.c>
     LoadModule systemd_module modules/mod_systemd.so
+  </IfModule>
+  <IfModule !mod_proxy_connect.c>
+   LoadModule proxy_connect_module modules/mod_proxy_connect.so
   </IfModule>
 </IfDefine>
 
