--- a/conf/radiusd/radiusd.conf.example
+++ b/conf/radiusd/radiusd.conf.example
@@ -75,7 +75,7 @@ run_dir = ${localstatedir}/run
 db_dir = ${raddbdir}
 
 rpc_user   = %%rpc_user%%
-rpc_pass   = %%rpc_pass%%
+rpc_pass   = "%%rpc_pass%%"
 rpc_port   = %%rpc_port%%
 rpc_host   = %%rpc_host%%
 rpc_proto  = %%rpc_proto%%
