--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1061,6 +1061,12 @@ Amount of requests on invalid URLs after which the rate limiting will kick in fo
 Requires to restart haproxy in order to apply the change.
 EOT
 
+[captive_portal.other_domain_names]
+type=list
+description=<<EOT
+Other domain names under which the captive portal responds
+EOT
+
 [advanced.admin_csp_security_headers]
 type=toggle
 options=enabled|disabled
