Added go_dns in documentation.conf and pf.conf.defaults

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -140,6 +140,13 @@ description=<<EOT
 Should pfdns be managed by PacketFence?
 EOT
 
+[services.go_dns]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Should go_dns be managed by PacketFence?
+EOT
+
 [services.pffilter]
 type=toggle
 options=enabled|disabled
@@ -476,6 +483,20 @@ type=hidden
 description=<<EOT
 Location of the ip binary. Only necessary to change if you are not
 running the RPMed version.
+EOT
+
+[services.go_dns_binary]
+type=hidden
+description=<<EOT
+Location of the go_dns binary.
+EOT
+
+[fencing.redirtimer]
+type=time
+description=<<EOT
+How long to display the progress bar during trap release. Default value is 
+based on VLAN enforcement techniques. Inline enforcement only users could 
+lower the value.
 EOT
 
 [fencing.wait_for_redirect]
