Add network_detection_initial_delay and network_detection_retry_delay configuration vars for captive_portal

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -966,6 +966,18 @@ to reach your PacketFence server and put your LAN's PacketFence IP. By default
 we will make this reach PacketFence's website as an easy solution.
 EOT
 
+[captive_portal.network_detection_initial_delay]
+type=time
+description=<<EOT
+The amount of time before network connectivity detection is started.
+EOT
+
+[captive_portal.network_detection_retry_delay]
+type=time
+description=<<EOT
+The amount of time between network connectivity detection checks.
+EOT
+
 [captive_portal.image_path]
 type=text
 description=<<EOT
