Changed config fencing.redirtimer to captive_portal.network_redirect_delay

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -478,14 +478,6 @@ Location of the ip binary. Only necessary to change if you are not
 running the RPMed version.
 EOT
 
-[fencing.redirtimer]
-type=time
-description=<<EOT
-How long to display the progress bar during trap release. Default value is 
-based on VLAN enforcement techniques. Inline enforcement only users could 
-lower the value.
-EOT
-
 [fencing.wait_for_redirect]
 type=numeric
 description=<<EOT
@@ -976,6 +968,14 @@ EOT
 type=time
 description=<<EOT
 The amount of time between network connectivity detection checks.
+EOT
+
+[captive_portal.network_redirect_delay]
+type=time
+description=<<EOT
+How long to display the progress bar during trap release. Default value is 
+based on VLAN enforcement techniques. Inline enforcement only users could 
+lower the value.
 EOT
 
 [captive_portal.image_path]
