AutoReg and VoIP is just char(1) in the db so it can't be N/A

--- a/raddb/mods-config/sql/main/mysql/queries.conf
+++ b/raddb/mods-config/sql/main/mysql/queries.conf
@@ -438,7 +438,7 @@ post-auth {
                 '%{request:NAS-IP-Address}', '%{request:NAS-Identifier}', 'Accept',\
                 '%{request:Module-Failure-Message}', '%{control:Auth-Type}', '%{request:EAP-Type}',\
                 '%{%{control:PacketFence-Role}:-N/A}', '%{%{control:PacketFence-Status}:-N/A}', '%{%{control:PacketFence-Profile}:-N/A}',\
-                '%{%{control:PacketFence-Source}:-N/A}', '%{%{control:PacketFence-AutoReg}:-N/A}', '%{%{control:PacketFence-IsPhone}:-N/A}',\
+                '%{%{control:PacketFence-Source}:-N/A}', '%{%{control:PacketFence-AutoReg}:-0}', '%{%{control:PacketFence-IsPhone}:-0}',\
                 '%{request:PacketFence-Domain}', '', '%{pairs:&request:[*]}','%{pairs:&reply:[*]}', '%{control:PacketFence-Request-Time}')"
             }
 
