--- a/conf/radiusd/eduroam-cluster.example
+++ b/conf/radiusd/eduroam-cluster.example
@@ -31,7 +31,7 @@ server eduroam.cluster {
             ntdomain
             %%reject_realm%%
             %%local_realm%%
-            if(!NAS-IP-Address){
+            if(!NAS-IP-Address || NAS-IP-Address == "0.0.0.0"){
                     update request {
                             NAS-IP-Address := "%{Packet-Src-IP-Address}"
                     }
@@ -47,7 +47,7 @@ server eduroam.cluster {
                     # so we keep it locally.
                     Proxy-To-Realm := "packetfence"
             }
-            if(!NAS-IP-Address){
+            if(!NAS-IP-Address || NAS-IP-Address == "0.0.0.0"){
                     update request {
                             NAS-IP-Address := "%{Packet-Src-IP-Address}"
                     }
