--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,8 @@ conf/radiusd/proxy.conf.inc
 conf/radiusd/radiusd.conf
 conf/radiusd/rest.conf
 conf/radiusd/sql.conf
+conf/radiusd/proxy.conf.loadbalancer
+conf/radiusd/radiusd_loadbalancer.conf
 conf/redis_cache.conf
 conf/redis_queue.conf
 conf/redis_ntlm_cache.conf
