added service for api-frontend

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -358,6 +358,13 @@ description=<<EOT
 Should routes be managed by PacketFence?
 EOT
 
+[services.api-frontend]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Should api-frontend be managed by PacketFence?
+EOT
+
 [services.httpd_binary]
 type=hidden
 description=<<EOT
