--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1322,7 +1322,7 @@ EOT
 type=toggle
 options=enable|disabled
 description=<<EOT
-Turn keepalived in unicast mode instead of multicast
+Enable keepalived in unicast mode instead of multicast
 EOT
 
 [active_active.dns_on_vip_only]
