added test for nexpose

--- a/t/data/pfdetect.conf
+++ b/t/data/pfdetect.conf
@@ -13,6 +13,11 @@ type=snort
 status=enabled
 path=/dev/null
 
+[nexpose]
+type=nexpose
+status=enabled
+path=/dev/null
+
 [suricata_md5]
 type=suricata_md5
 status=enabled
