--- a/debian/control
+++ b/debian/control
@@ -138,7 +138,7 @@ Depends: ${misc:Depends}, vlan,
 # for packaging
  dpkg-distribution,
 # golang build
- golang-1.7-go,
+ golang-1.7-go, libipset-dev,
 # Distribution specific
  ${packetfence:dist}
 Description: PacketFence network registration / worm mitigation system
