--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: packetfence
 Section: net
 Priority: optional
 Maintainer: Durand fabrice <fdurand@inverse.ca>
-Build-Depends: debhelper (>= 7.0.50~), gettext, libparse-recdescent-perl, gcc, dpkg-distribution, dh-systemd, libfile-fcntllock-perl, asciidoctor, golang-1.7-go, git
+Build-Depends: debhelper (>= 7.0.50~), gettext, libparse-recdescent-perl, gcc, dpkg-distribution, dh-systemd, libfile-fcntllock-perl, asciidoctor, golang-1.7-go, git, libipset-dev, pkg-config
 Standards-Version: 3.8.4
 Vcs-Git: git://github.com/inverse-inc/packetfence.git
 Vcs-browser: https://github.com/inverse-inc/packetfence/
@@ -138,7 +138,7 @@ Depends: ${misc:Depends}, vlan,
 # for packaging
  dpkg-distribution,
 # golang build
- golang-1.7-go, libipset-dev,
+ golang-1.7-go,
 # Distribution specific
  ${packetfence:dist}
 Description: PacketFence network registration / worm mitigation system
