Remove date time from the cache keys

--- a/t/data/authentication.conf
+++ b/t/data/authentication.conf
@@ -231,3 +231,18 @@ action0=set_role=default
 action1=set_access_duration=12h
 condition0=TLS-Client-Cert-Serial,equals,tls
 condition1=SSID,starts,tls
+
+[LDAPCACHEMATCH]
+description=pf-test
+password=
+scope=sub
+binddn=CN=test,DC=inverse,DC=ca
+basedn=DC=ldap,DC=inverse,DC=ca
+usernameattribute=user
+connection_timeout=5
+encryption=none
+port=33389
+type=AD
+host=127.0.0.1
+cache_match=1
+
