--- a/conf/Corefile.example
+++ b/conf/Corefile.example
@@ -7,7 +7,8 @@ proxy . /etc/resolv.conf
 # all other domains are subject to interception
 :53 {
     pfdns {
-        enforcement true
+        # Default redirection:
+        #redirectTo: 192.168.0.1
     }
     # Anything not handled by pfdns will be resolved normally
 [% domain %]
