--- a/t/data/pf.conf
+++ b/t/data/pf.conf
@@ -8,6 +8,8 @@ passthroughs=zammitcorp.com,*.zamm.it,dinde.ca:tcp:2828,*.yes.hello:1234,*.tld,z
 [database]
 pass=packet
 host=127.0.0.1
+db=pf_smoke_test
+user=pf_smoke_tester
 
 [interface eth0]
 type=management
